5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4375/executions/1832_3179.log
== TEST (2019-06-13 18:51:10) 
-- CODE:
from numpy import*
n=array(eval(input("digite um vetor: ")))
d=zeros(n, dtype=int)
for i in range (size(n)):
	d[i]=n[i]
	if(n[i]==1):
		d[i]=d[i-1]
print(d)
		
		
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:51:49) 
-- CODE:
from numpy import*
n=array(eval(input("digite um vetor: ")))
d=zeros(n, dtype=int)
for i in range (size(n)):
	if(n[i]==1):
		d[i]=d[i-1]
print(d)
		
		
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:52:21) 
-- CODE:
from numpy import*
n=array(eval(input("digite um vetor: ")))
d=zeros(n, dtype=int)
for i in range (size(n)):
	if(n[i]==1):
		d[i]=d[i]-1
print(d)
		
		
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:54:10) 
-- CODE:
from numpy import*
n=array(eval(input("digite um vetor: ")))
d=zeros(n, dtype=int)
for i in range (size(n)):
	d[i]=n[i]
	if(n[i]==1):
		d[i]=d[i]-1
print(d)
		
		
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:56:43) 
-- CODE:
from numpy import*
n=array(eval(input("digite um vetor: ")))
d=zeros(n, dtype=int)
for i in range (size(n)):
	d[i]=n[i]
	if(n[i]==1):
		d[i]=d[i]-1
print(d)
		
		
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:00:35) 
-- CODE:
from numpy import*
n=array(eval(input("digite um vetor: ")))
d=zeros(n, dtype=int)
for i in range (size(n)):
	d[i]=n[i]
	if(n[i]==1):
		d[i]=n[i+1]
print(d)
		
		
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:01:24) 
-- CODE:
from numpy import*
n=array(eval(input("digite um vetor: ")))
d=zeros(n, dtype=int)
for i in range (size(n)):
	if(n[i]==1):
		d[i]=n[i+1]
print(d)
		
		
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:03:08) 
-- CODE:
from numpy import*
n=array(eval(input("digite um vetor: ")))
d=zeros(n, dtype=int)
for i in range (size(n)):
	d[i]=n[i]
	if(n[i]==1):
		d[i]=n[i]+1
print(d)
		
		
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:03:38) 
-- CODE:
from numpy import*
n=array(eval(input("digite um vetor: ")))
d=zeros(n, dtype=int)
for i in range (size(n)):
	d[i]=n[i]
	if(n[i]==1):
		d[i]=n[i-1]
print(d)
		
		
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:04:11) 
-- CODE:
from numpy import*
n=array(eval(input("digite um vetor: ")))
d=zeros(n, dtype=int)
for i in range (n):
	d[i]=n[i]
	if(n[i]==1):
		d[i]=n[i-1]
print(d)
		
		
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:05:20) 
-- CODE:
from numpy import*
n=array(eval(input("digite um vetor: ")))
d=zeros(n, dtype=int)
for i in range (size(n)):
	d[i]=n[i]
	if(n[i]==1):
		n[i]=n[i]-1
print(d)
		
		
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:06:46) 
-- CODE:
from numpy import*
n=array(eval(input("digite um vetor: ")))
d=zeros(n, dtype=int)
for i in range (size(n)):

	if(n[i]==1):
		n[i]=n[i]-1
print(d)
		
		
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:07:10) 
-- CODE:
from numpy import*
n=array(eval(input("digite um vetor: ")))
d=zeros(n, dtype=int)
for i in range (size(n)):

	if(n[i]==1):
		n[i]=n[i-1]
print(d)
		
		
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:08:49) 
-- CODE:
from numpy import*
n=array(eval(input("digite um vetor: ")))
d=zeros(n, dtype=int)
for i in range (size(n)):
	d[i]=n[i]
	if(n[i]==1):
		n[i]=n[i-1]
		
print(d)
		
		
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:09:04) 
-- CODE:
from numpy import*
n=array(eval(input("digite um vetor: ")))
d=zeros(n, dtype=int)
for i in range (size(n)):
	
	if(n[i]==1):
		n[i]=n[i-1]
		
print(d)
		
		
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:11:16) 
-- CODE:
from numpy import*
n=array(eval(input("digite um vetor: ")))
d=zeros(n, dtype=int)
for i in range (size(n)):
	d[i]=n[i]
	if(n[i]==1):
		d[i]=n[-1-i]	
print(d)
		
		
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:11:31) 
-- CODE:
from numpy import*
n=array(eval(input("digite um vetor: ")))
d=zeros(n, dtype=int)
for i in range (size(n)):
	if(n[i]==1):
		d[i]=n[-1-i]	
print(d)
		
		
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:12:43) 
-- CODE:
from numpy import*
n=array(eval(input("digite um vetor: ")))
d=zeros(size(n), dtype=int)
for i in range (size(n)):
	if(n[i]==1):
		d[i]=n[-1-i]	
print(d)
		
		
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:17:52) 
-- CODE:
from numpy import*
n=array(eval(input("digite um vetor: ")))
d=zeros(size(n), dtype=int)
b=0
for d in range(n):
	if(d==1):
		d=z[-1*(b+1)]
	b=b+1
print(z)

		
		
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:18:42) 
-- CODE:
from numpy import*
n=array(eval(input("digite um vetor: ")))
d=zeros(size(n), dtype=int)
b=0
for d in range n:
	if(d==1):
		d=z[-1*(b+1)]
	b=b+1
print(z)

		
		
		
		

-- ERROR:
File "XXXX", line 5
    for d in range n:
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:19:08) 
-- CODE:
from numpy import*
n=array(eval(input("digite um vetor: ")))
d=zeros(size(n), dtype=int)
b=0
for d in range (n):
	if(d==1):
		d=z[-1*(b+1)]
	b=b+1
print(z)

		
		
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:19:54) 
-- CODE:
from numpy import*
n=array(eval(input("digite um vetor: ")))
d=zeros(size(n), dtype=int)
b=0
for d in n:
	if(d==1):
		d=z[-1*(b+1)]
	b=b+1
print(z)

		
		
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:20:17) 
-- CODE:
from numpy import*
n=array(eval(input("digite um vetor: ")))
d=zeros(size(n), dtype=int)
b=0
for d in n:
	if(d==1):
		d=d[-1*(b+1)]
	b=b+1
print(z)

		
		
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:25:03) 
-- CODE:
from numpy import*
n=array(eval(input("digite um vetor: ")))
d=zeros(n, dtype=int)
for i in range (size(n)):
	d[i]=n[i]
	if(n[i]==1):
		for j in range(i,size(n)-1):
			d[j]=n[j+1]
		d[-1]=1
			
print(d)
		
		
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:25:39) 
-- CODE:
from numpy import*
n=array(eval(input("digite um vetor: ")))
d=zeros(size(n), dtype=int)
for i in range (size(n)):
	d[i]=n[i]
	if(n[i]==1):
		for j in range(i,size(n)-1):
			d[j]=n[j+1]
		d[-1]=1
			
print(d)
		
		
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:26:01) 
-- CODE:
from numpy import*
n=array(eval(input("digite um vetor: ")))
d=zeros(size(n), dtype=int)
for i in range (size(n)):
	if(n[i]==1):
		for j in range(i,size(n)-1):
			d[j]=n[j+1]
		d[-1]=1
			
print(d)
		
		
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:29:30) 
-- CODE:
from numpy import*
n=array(eval(input("digite um vetor: ")))
d=zeros(size(n), dtype=int)
for i in range (size(n)):
	d[i]=n[i]
	if(n[i]==1):
		for j in range(i,size(n)-1):
			d[j]=n[j+1]
		d[-1]=1
			
print(d)
		
		
		
		

-- EXECUTION TIME:
1.12814
-- TEST CASE 1:
---- input:
[2,3,4,1,1,1,-1]
---- correct output:
[ 2  3  4 -1  1  1  1]
---- user output:
[ 2  3  4  1  1 -1 -1]
-- TEST CASE 2:
---- input:
[1,1,1,5,4,3,2]
---- correct output:
[5 4 3 2 1 1 1]
---- user output:
[1 1 5 5 4 3 2]
-- TEST CASE 3:
---- input:
[1,0,1,2,0,1,4,1,5]
---- correct output:
[0 2 0 4 5 1 1 1 1]
---- user output:
[0 0 2 2 0 4 4 5 5]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:29:52) 
-- CODE:
from numpy import*
n=array(eval(input("digite um vetor: ")))
d=zeros(size(n), dtype=int)
for i in range (size(n)):
	d[i]=n[i]
	if(n[i]==1):
		for j in range(i,size(n)-1):
			d[j]=n[j+1]
		d[-1]=1
			
print(d)
		
		
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:30:37) 
-- CODE:
from numpy import*
n=array(eval(input("digite um vetor: ")))
d=zeros(size(n), dtype=int)
for i in range (size(n)):
	d[i]=n[i]
	if(n[i]==1):
		for j in range(i,size(n)-1):
			d[j]=n[j+1]
d[-1]=1
			
print(d)
		
		
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:31:11) 
-- CODE:
from numpy import*
n=array(eval(input("digite um vetor: ")))
d=zeros(size(n), dtype=int)
for i in range (size(n)):
	d[i]=n[i]
	if(n[i]==1):
		for j in range(i,size(n)):
			d[j]=n[j+1]
d[-1]=1
			
print(d)
		
		
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:31:47) 
-- CODE:
from numpy import*
n=array(eval(input("digite um vetor: ")))
d=zeros(size(n), dtype=int)
for i in range (size(n)):
	d[i]=n[i]
	if(n[i]==1):
		for j in range(i,size(n)-1):
			d[j]=n[j]
d[-1]=1
			
print(d)
		
		
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:32:17) 
-- CODE:
from numpy import*
n=array(eval(input("digite um vetor: ")))
d=zeros(size(n), dtype=int)
for i in range (size(n)):
	d[i]=n[i]
	if(n[i]==1):
		for j in range(i,size(n)-1):
			d[j]=n[j-1]
d[-1]=1
			
print(d)
		
		
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:33:52) 
-- CODE:
from numpy import*
n=array(eval(input("digite um vetor: ")))
d=zeros(size(n), dtype=int)
for i in range (size(n)):
	d[i]=n[i]
	if(n[i]==1):
		for j in range(i,size(n)-1):
			d[j]=n[j-1]
d[-1]=1
			
print(d)
		
		
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:34:12) 
-- CODE:
from numpy import*
n=array(eval(input("digite um vetor: ")))
d=zeros(size(n), dtype=int)
for i in range (size(n)):
	d[i]=n[i]
	if(n[i]==1):
		for j in range(i,size(n)-1):
			d[j]=n[j+1]
d[-1]=1
			
print(d)
		
		
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:34:45) 
-- CODE:
from numpy import*
n=array(eval(input("digite um vetor: ")))
d=zeros(size(n), dtype=int)
for i in range (size(n)):
	d[i]=n[i]
	if(n[i]==1):
		for j in range(i,size(n)-1):
			d[j]=n[j+1]
		d[-1]=1
			
print(d)
		
		
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:35:07) 
-- CODE:
from numpy import*
n=array(eval(input("digite um vetor: ")))
d=zeros(size(n), dtype=int)
for i in range (size(n)):
	d[i]=n[i]
	if(n[i]==1):
		for j in range(i,size(n)-1):
			d[j]=n[j-1]
		d[-1]=1
			
print(d)
		
		
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:39:23) 
-- CODE:
from numpy import*
n=array(eval(input("digite um vetor: ")))
d=zeros(size(n), dtype=int)
for i in range(size(n)):
	d[i]=n[i]
for i in range (size(n)):
	if(n[i]==1):
		for j in range(i,size(n)-1):
			d[j]=n[j-1]
		d[-1]=1
			
print(d)
		
		
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:39:51) 
-- CODE:
from numpy import*
n=array(eval(input("digite um vetor: ")))
d=zeros(size(n), dtype=int)
for i in range(size(n)):
	d[i]=n[i]
for i in range (size(n)):
	if(n[i]==1):
		for j in range(i,size(n)-1):
			d[j]=n[j+1]
		d[-1]=1
			
print(d)
		
		
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:40:25) 
-- CODE:
from numpy import*
n=array(eval(input("digite um vetor: ")))
d=zeros(size(n), dtype=int)
for i in range(size(n)):
	d[i]=n[i]
for i in range (size(n)):
	if(n[i]==1):
		for j in range(i,size(n)-1):
			d[j]=n[j+1]
d[-1]=1
			
print(d)
		
		
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:40:53) 
-- CODE:
from numpy import*
n=array(eval(input("digite um vetor: ")))
d=zeros(size(n), dtype=int)
for i in range(size(n)):
	d[i]=n[i]
for i in range (size(n)):
	if(n[i]==1):
		for j in range(i,size(n)-1):
			d[j]=n[j+1]
		d[-1]=1
			
print(d)
		
		
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:42:50) 
-- CODE:
from numpy import*
n=array(eval(input("digite um vetor: ")))
d=zeros(size(n), dtype=int)
for i in range(size(n)):
	d[i]=n[i]
for i in range (size(n)):
	if(n[i]==1):
		for j in range(i,size(n)-1):
			d[j]=n[j+1]
			print(j)
		d[-1]=1
			
print(d)
		
		
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:48:28) 
-- CODE:
from numpy import*
n=array(eval(input("digite um vetor: ")))
z=zeros(size(n), dtype=int)

for i in range(size(n)):
	d[i]=n[i]
for i in range (size(n)):
	if(n[i]==1):
		for j in range(i,size(n)-1):
			d[j]=n[j+1]
			print(j)
		d[-1]=1
			
print(d)
		
		
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:49:11) 
-- CODE:
from numpy import*
n=array(eval(input("digite um vetor: ")))
z=zeros(size(n), dtype=int)

for i in range(size(n)):
	d[i]=n[i]
for i in range (size(n)):
	if(n[i]==1):
		for j in range(i,size(n)-1):
			d[j]=n[j+1]
			print(j)
		d[-1]=1
			
print(d)
		
		
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:49:34) 
-- CODE:
from numpy import*
n=array(eval(input("digite um vetor: ")))
d=zeros(size(n), dtype=int)

for i in range(size(n)):
	d[i]=n[i]
for i in range (size(n)):
	if(n[i]==1):
		for j in range(i,size(n)-1):
			d[j]=n[j+1]
			print(j)
		d[-1]=1
			
print(d)
		
		
		
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
